--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="login">Login</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="description">Description</string>
+    <string name="submit">Submit</string>
+    <string name="takePicture">Take Picture</string>
 </resources>
