--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="description">Description</string>
     <string name="submit">Submit</string>
     <string name="takePicture">Take Picture</string>
+    <string name="logout">Logout</string>
 </resources>
