--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="submit">Submit</string>
     <string name="takePicture">Take Picture</string>
     <string name="logout">Logout</string>
+    <string name="Home">Home</string>
+    <string name="Compose">Compose</string>
+    <string name="Profile">Profile</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
