--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="description">Description</string>
-    <string name="submit">Submit</string>
+    <string name="submit">Post</string>
     <string name="takePicture">Take Picture</string>
     <string name="logout">Logout</string>
     <string name="Home">Home</string>
